--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  pdf: ^3.11.3
+  open_file: ^3.5.10
+  permission_handler: ^12.0.0+1
+  horizontal_data_table: ^4.3.1
 
 dev_dependencies:
   flutter_test:
