--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   path: ^1.9.1
   file_picker: ^10.1.9
   image_picker: ^1.1.2
-  url_launcher: ^6.3.1
+  url_launcher:
   calendar_date_picker2: ^2.0.0
   intl: ^0.20.2 
   flutter_pdfview: ^1.4.0+1
@@ -88,6 +88,7 @@ flutter:
     - assets/logo.png
     - assets/appbar.png
     - assets/Invoice.jpg
+    - assets/
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
