--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,10 +84,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/login.png
-    - assets/logo.png
-    - assets/appbar.png
-    - assets/Invoice.jpg
+    - assets/
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
