--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   open_file: ^3.5.10
   permission_handler: ^12.0.0+1
   horizontal_data_table: ^4.3.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
