--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   printing: ^5.14.2
   share_plus: ^11.0.0
   flutter_lints: ^5.0.0  
+  shared_preferences: ^2.5.3
   # share_plus: ^10.1.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
