--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   open_file: ^3.5.10
   permission_handler: ^12.0.0+1
   horizontal_data_table: ^4.3.1
+  custom_linear_progress_indicator: ^0.0.4
 
 
 dev_dependencies:
