--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,9 @@ dependencies:
   permission_handler: ^12.0.0+1
   horizontal_data_table: ^4.3.1
   custom_linear_progress_indicator: ^0.0.4
+  blurry_modal_progress_hud: ^1.1.1
+  widget_loading: ^0.3.2
+  
 
 
 dev_dependencies:
