commited by haririshnan

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   custom_linear_progress_indicator: ^0.0.4
   blurry_modal_progress_hud: ^1.1.1
   widget_loading: ^0.3.2
+  animated_notch_bottom_bar: ^1.0.2
   
 
 
