--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   blurry_modal_progress_hud: ^1.1.1
   widget_loading: ^0.3.2
   animated_notch_bottom_bar: ^1.0.2
+  translator: ^1.0.3+1 
   
 
 
