--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   widget_loading: ^0.3.2
   animated_notch_bottom_bar: ^1.0.2
   translator: ^1.0.3+1 
+  sms_autofill: ^2.4.1
+ 
   
 
 
