--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   animated_notch_bottom_bar: ^1.0.2
   translator: ^1.0.3+1 
   sms_autofill: ^2.4.1
+  package_info_plus: ^8.3.0
+
 
  
   
