--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   pdf: ^3.11.3
   open_file: ^3.5.10
-  permission_handler: ^12.0.0+1
+  permission_handler: ^11.3.1
   horizontal_data_table: ^4.3.1
   custom_linear_progress_indicator: ^0.0.4
   blurry_modal_progress_hud: ^1.1.1
@@ -63,6 +63,10 @@ dependencies:
   translator: ^1.0.3+1 
   sms_autofill: ^2.4.1
   package_info_plus: ^8.3.0
+  qr_flutter: ^4.1.0
+  google_fonts: ^6.2.1
+  avatar_glow: ^3.0.1
+  
 
 
  
@@ -72,7 +76,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
+  flutter_launcher_icons: ^0.13.1  
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/appicon.png" 
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
