--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,9 @@ dependencies:
   google_fonts: ^6.2.1
   avatar_glow: ^3.0.1
   flutter_image_compress: ^2.1.0
+  screenshot: ^3.0.0
+  pattern_lock: ^2.0.0
+  
   
 
 
