--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,4 +2,5 @@ org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m
 android.useAndroidX=true
 android.enableJetifier=true
 android.nonTransitiveRClass=true
+android.enableR8.fullMode=false
 
