--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,9 @@ dependencies:
   json_annotation: ^4.9.0
   build_runner: ^2.4.6
   connectivity_plus: ^7.0.0
+  numberpicker: ^2.1.2
+  flutter_local_notifications: ^17.0.0
+  timezone: ^0.9.2
   # flutter_launcher_icons: ^0.14.4
   
   
