--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,8 +77,10 @@ dependencies:
   numberpicker: ^2.1.2
   flutter_local_notifications: ^17.0.0
   timezone: ^0.9.2
-  # flutter_launcher_icons: ^0.14.4
-  
+  flutter_native_contact_picker: ^0.0.11
+  googleapis: ^15.0.0
+  googleapis_auth: ^2.0.0
+  google_sign_in: ^6.1.5  
   
   
   
